# nexis

./: .dockerignore  .gitignore  BUGFIXES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.production  INSTALL.md  LICENSE  QUICKSTART.md  README.md  demo.sh  docker-compose.yml  e2e-test-report.json  fly.toml  run_all_tests.sh
HomebrewFormula/: nexis.rb
benchmarks/: TEST_PLAN.md  final_results.md  results.md  run_benchmarks.py
core/: Cargo.toml
core/src/: cache.rs  cilow.rs  lib.rs  neural_search.rs  scrape.rs  search.rs  telemetry.rs
core/src/crawl/: checkpoint.rs  dedup.rs  engine.rs  frontier.rs  mod.rs  politeness.rs  sitemap.rs
core/src/extract/: links.rs  metadata.rs  mod.rs  readability.rs  streaming.rs
core/src/fetch/: browser.rs  http.rs  mod.rs  proxy.rs  router.rs
core/src/index/: dense.rs  hybrid.rs  mod.rs  sparse.rs
core/src/renderless/: mod.rs
core/src/search/: query_understanding.rs  reranker.rs
core/src/structured_api/: executor.rs  extraction.rs  generator.rs  mod.rs  spec.rs
core/src/telemetry/: otel.rs
core/src/transform/: json.rs  markdown.rs  mod.rs
core/src/vsb_graph/: classifier.rs  emitter.rs  ml_classifier.rs  mod.rs  segmenter.rs  types.rs
deploy/: deploy.sh  env.template  test-cloud.sh
docs/: API_EXAMPLES.md  ARCHITECTURE.md  api-reference.md  mcp-setup.md  quickstart.md  self-hosting.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: dithered-video.webm
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/lib/: auth-schema.ts  auth.ts
frontend/src/pages/: App.tsx  Landing.tsx  Processor.tsx
integrations/langchain/: markify_langchain.py
sdks/go/: go.mod
sdks/go/nexis/: client.go
sdks/python/: pyproject.toml
sdks/python/nexis/: __init__.py
sdks/typescript/: package.json
sdks/typescript/src/: index.ts
server/: Cargo.toml
server/src/: main.rs  mcp.rs  rest.rs
tests/: test_full_e2e.py
tests/e2e/: integration_tests.rs
