[package]
name = "nexis-core"
version = "0.1.0"
edition = "2021"
description = "The MIT-licensed web data extraction engine for AI agents"
license = "Apache-2.0"
repository = "https://github.com/nexis/nexis"
keywords = ["web-scraping", "markdown", "ai", "mcp", "extraction"]
categories = ["web-programming", "text-processing"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "stream"] }

# Headless browser (optional feature)
chromiumoxide = { version = "0.7", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

# HTML parsing & extraction
lol_html = "2.1"
dom_smoothie = "0.16"
dom_query = "0.26"
fast_html2md = "0.0.61"
scraper = "0.23"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Cryptography (content hashing)
sha2 = "0.10"

# Full-text search (Tantivy BM25)
tantivy = "0.24"

# HNSW approximate nearest neighbor search
usearch = "2.24"

# Dense embeddings (fastembed for local neural vectors)
fastembed = { version = "4", optional = true }

# Logging & telemetry
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Fingerprinting & anti-bot
rand = "0.8"
fastrand = "2"

# Robots.txt
robotstxt = "0.3"

[features]
default = []
browser = ["dep:chromiumoxide", "dep:tokio-tungstenite"]
ml-embeddings = ["dep:fastembed"]
