[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexis"
version = "0.1.0"
description = "The MIT-licensed web data layer for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Markify" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/nexis/markify"
Repository = "https://github.com/nexis/markify"

[tool.ruff]
line-length = 100
target-version = "py310"
